Style background and header

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <title>League of Legends Survey</title>
     <style>
     body{
-        background-color:#e6cf8b;
+        background:url(http://img12.deviantart.net/40bc/i/2017/106/f/9/xayah_and_rakan__by_rubensayan-db60z1b.jpg);
+        background-repeat:no-repeat;
+        background-size:cover;
     }
     .header{
-        color:#22264b;
+        color:#ffa500;
         text-align:center;
-        margin-top:5%;
+        margin-top:3%;
     }
     </style>
 </head>
