Change username to user in sessionStorage to match given id

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             sessionStorage.setItem("user",document.getElementById("user").value);
             //ask about getting the value of the selected radio button
             sessionStorage.setItem("rank", document.getElementById("rank").value);
-            alert("Thank you "+sessionStorage.getItem("username")+" !");
+            alert("Thank you "+sessionStorage.getItem("user")+" !");
             // 
         }
             // $('#form').trigger("reset");    
